feat(server): added me routes + API specs, improved comments
